# Mundial2026Quiniela

./: .env.example  .gitignore  README.md  docker-compose.build.yml  docker-compose.yml
.github/workflows/: ci.yml  deploy.yml
.squad/: .first-run  decisions.md  routing.md  team.md
.squad/agents/basher/: charter.md  history.md
.squad/agents/danny/: charter.md  history.md
.squad/agents/linus/: charter.md  history.md
.squad/agents/livingston/: charter.md  history.md
.squad/agents/ralph/: charter.md  history.md
.squad/agents/rusty/: charter.md  history.md
.squad/agents/saul/: charter.md  (+1 more)
.squad/casting/: history.json  registry.json
.squad/identity/: now.md  wisdom.md
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/app/: main.py
backend/app/api/: deps.py  router.py
backend/app/api/routes/: admin.py  auth.py  leaderboard.py  predictions.py  tournament.py
backend/app/core/: config.py  scoring.py  security.py
backend/app/db/: base.py  init_db.py
backend/app/models/: __init__.py  group.py  invite_token.py  match.py  prediction.py  score.py  team.py  user.py
backend/app/schemas/: auth.py  leaderboard.py  prediction.py  tournament.py
backend/app/services/: football_api.py  scheduler.py  telegram.py
docker/: .env.example  docker-compose.build.yml  docker-compose.yml
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts
frontend/e2e/: admin.spec.ts
frontend/src/: App.tsx  index.css  main.tsx
(+46 files in other folders)
