[project]
name = "Mundial2026Quiniela-backend"
version = "0.1.0"
description = "Backend API for Mundial 2026 Quiniela — World Cup betting pool"
requires-python = ">=3.12"
license = "MIT"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
